final html push

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     </nav>
     <div class="header-welcome">
       <div class="container">
+        <div class="header-welcome-overlay"></div>
         <h1>Welcome to Three Star Media</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto velit architecto possimus dolores autem voluptatum earum, facere ad eligendi! Sit exercitationem nulla, error aliquam deleniti cupiditate laboriosam earum consequuntur ducimus.</p>
-        <button>Connect with us ▶</button>
+        <button class="welcome-btn">Connect with us ▶</button>
       </div> <!--END container-->
     </div> <!--END header-welcome-->
   </header>
@@ -55,38 +56,38 @@
           <h3>Digital Transformation</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ipsum, atque a recusandae dignissimos ab. Beatae, architecto facilis delectus eligendi vero ipsam vel in deserunt saepe blanditiis autem rerum explicabo!</p>
           <button>Digital Plans ▶</button>
-        </div>
+        </div><!-- END services digital-->
         <div class="services marketing">
           <img src="images/marketing.jpg" alt="Laptop">
           <h3>Marketing</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum obcaecati in cumque maxime cum blanditiis, asperiores consequuntur vitae soluta fugit, officiis ipsam consequatur esse molestiae cupiditate deleniti quibusdam debitis quos.</p>
           <button>Marketing Plans ▶</button>
-        </div>
+        </div><!-- END services marketing-->
         <div class="services video">
           <img src="images/video.jpg" alt="Handheld phone with YouTube Icon">
           <h3>Video Production</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, iusto! Minus omnis eaque magni, minima nesciunt eius possimus laudantium, dolores cupiditate quo veniam! Iusto itaque ad, accusamus ratione perspiciatis ea!</p>
           <button>Video Plans ▶</button>
-        </div>
+        </div><!-- END services video-->
         <div class="services web">
           <img src="images/web.jpg" alt="Phone and note book">
           <h3> Web Development</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos autem amet optio, dolorem ducimus ullam saepe quidem, similique cupiditate incidunt sequi nostrum minus. Totam ducimus velit ea laudantium neque doloremque.</p>
           <button>Web Plans ▶</button>
-        </div>
+        </div><!-- END services web-->
         <div class="services print">
           <img src="images/print.jpg" alt="Newpaper boxes on the Street">
           <h3>Print</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, repellendus! Illo at ut cupiditate dignissimos hic, eum accusamus odit, beatae repellat labore unde debitis vero corporis atque culpa magni maxime?</p>
           <button>Print Plans ▶</button>
-        </div> 
+        </div> <!-- END services web-->
       </div><!--END container-->  
     </section> <!--END section-services-->
     <section class="section-vision">
       <div class="container">
         <h3>Our Vision</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima magnam voluptatem quos exercitationem, reiciendis, ea sapiente in, doloremque sed laboriosam molestiae officiis aperiam porro ducimus dolorum dicta autem. Nobis, explicabo!</p>
-        <button class="section-vision">Learn More ▶</button>
+        <button class="vision-btn">Learn More ▶</button>
       </div> <!--END container-->  
     </section> <!-- END section-vision-->
     <section class="section-team">
@@ -96,7 +97,7 @@
         <div class="profile text">
         <h3>John Doe</h3>
         <h4>CEO and Co-owner</h4>
-        <hr> <!-- use border bottom-->
+        <!-- ❗   use border bottom ❗-->
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ab consequatur, accusamus error architecto numquam placeat temporibus nemo ipsum hic nulla veniam enim eveniet suscipit, voluptatem, rem sit aut. Maiores.</p>
         </div>
         <img class="profile image" src="images/bob.jpg" alt="Bob Rite">
