--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Three Star Media</title>
-  <!--<link rel="stylesheet" href="css/styles.css"> -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
     <nav>
       <div class="container">
+        <div class="logo">
         <img src="images/logo.png" alt="Three Star Media Logo">
+      </div> <!-- END logo-->
         <ul>
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About Us</a></li>
@@ -31,11 +35,9 @@
     <div class="header-welcome"> <!-- ❗ flex box  ❗-->
       <div class="container">
         <!--Image in the background in CSS-->
-        <div class="header-welcome-overlay">
         <h1>Welcome to Three Star Media</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto velit architecto possimus dolores autem voluptatum earum, facere ad eligendi! Sit exercitationem nulla, error aliquam deleniti cupiditate laboriosam earum consequuntur ducimus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
         <button class="welcome-btn">Connect with us ▶</button>
-        </div><!--END header-welcome-overlay -->
       </div> <!-- END container-->
     </div> <!--END header-welcome-->
   </header>
@@ -47,8 +49,8 @@
         </div> <!--END section-about-image-->
         <div class="section-about-text">
           <h2>About Us</h2>
-          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae delectus dignissimos quis, voluptatem totam perferendis ipsam voluptates laborum. Harum, sint beatae ipsum asperiores suscipit quasi provident voluptatibus mollitia nobis dolore?</p>
-          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, odio voluptatem sunt minima quis necessitatibus facere nisi iure aliquam animi exercitationem eligendi repellat quaerat blanditiis placeat! Soluta doloremque expedita facere.</p>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?</p>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Animi, velit ipsam? Atque accusamus, excepturi corrupti sunt reiciendis soluta quo commodi guidem, non perferendis vel sed facilis rerum cum in exercitationem?</p>
           </div> <!--END section-about-text-->
       </div> <!--END Container-->
     </section> <!-- END section-about-->
@@ -58,31 +60,31 @@
         <div class="services digital">
           <img src="images/digital.jpg" alt="Digital Tech">
           <h3>Digital Transformation</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ipsum, atque a recusandae dignissimos ab. Beatae, architecto facilis delectus eligendi vero ipsam vel in deserunt saepe blanditiis autem rerum explicabo!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
           <button>Digital Plans ▶</button>
         </div><!-- END services digital-->
         <div class="services marketing">
           <img src="images/marketing.jpg" alt="Laptop">
           <h3>Marketing</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum obcaecati in cumque maxime cum blanditiis, asperiores consequuntur vitae soluta fugit, officiis ipsam consequatur esse molestiae cupiditate deleniti quibusdam debitis quos.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
           <button>Marketing Plans ▶</button>
         </div><!-- END services marketing-->
         <div class="services video">
           <img src="images/video.jpg" alt="Handheld phone with YouTube Icon">
           <h3>Video Production</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, iusto! Minus omnis eaque magni, minima nesciunt eius possimus laudantium, dolores cupiditate quo veniam! Iusto itaque ad, accusamus ratione perspiciatis ea!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
           <button>Video Plans ▶</button>
         </div><!-- END services video-->
         <div class="services web">
           <img src="images/web.jpg" alt="Phone and note book">
           <h3> Web Development</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos autem amet optio, dolorem ducimus ullam saepe quidem, similique cupiditate incidunt sequi nostrum minus. Totam ducimus velit ea laudantium neque doloremque.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
           <button>Web Plans ▶</button>
         </div><!-- END services web-->
         <div class="services print">
           <img src="images/print.jpg" alt="Newpaper boxes on the Street">
           <h3>Print</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, repellendus! Illo at ut cupiditate dignissimos hic, eum accusamus odit, beatae repellat labore unde debitis vero corporis atque culpa magni maxime?</p>
+         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
           <button>Print Plans ▶</button>
         </div> <!-- END services web-->
       </div><!--END container-->  
@@ -90,27 +92,31 @@
     <section class="section-vision">  <!-- ❗   flexbox - one asxis ❗-->
       <div class="container">
         <h3>Our Vision</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima magnam voluptatem quos exercitationem, reiciendis, ea sapiente in, doloremque sed laboriosam molestiae officiis aperiam porro ducimus dolorum dicta autem. Nobis, explicabo!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex voluptatem deleniti lure, sit, accusantium rerum est commodi veniam tempora perspiciatis nobis officiis fagiat eaque. Veritatis exercitationem delectus ex ab laudantium.</p>
         <button class="vision-btn">Learn More ▶</button>
       </div> <!--END container-->  
     </section> <!-- END section-vision-->
     <section class="section-team"> <!-- ✔    grid and order CSS ✔ -->
       <div class="container">
         <h2>Our Team</h2>
-        <img class="profile image" src="images/john.jpg" alt="John Doe">
-        <div class="profile text">
-        <h3>John Doe</h3>
-        <h4>CEO and Co-owner</h4>
-        <!-- ❗   use border bottom ❗-->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ab consequatur, accusamus error architecto numquam placeat temporibus nemo ipsum hic nulla veniam enim eveniet suscipit, voluptatem, rem sit aut. Maiores.</p>
-        </div>
-        <img class="profile image" src="images/bob.jpg" alt="Bob Rite">
-        <div class="profile text">
-        <h3>Bob Rite</h3>
-        <h4>CFO and Co-owner</h4>
-        <!-- ❗   use border bottom ❗-->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis hic unde, ratione deleniti ipsum tenetur! Itaque officiis ratione unde corrupti consequatur totam dicta sapiente, corporis, fuga sint velit adipisci enim.</p>
-        </div>
+          <div class="profile-grid">
+            <img class="profile image" src="images/john.jpg" alt="John Doe">
+            <div class="profile text">
+              <h3>John Doe</h3>
+              <h4>CEO and Co-owner</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.
+              </p>
+            </div>
+          </div>
+          <div class="profile-grid">
+            <img class="profile image" src="images/bob.jpg" alt="Bob Rite">
+            <div class="profile text">
+              <h3>Bob Rite</h3>
+              <h4>CFO and Co-owner</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.
+              </p>
+            </div>
+          </div>
       </div><!--END container-->
     </section><!--END section-team-->
     <section class="section-contact">
@@ -157,7 +163,7 @@
   </main>
   <footer>
     <div class="container">
-      <p>Copyright Three Star Meida, 2020</p>
+      <p>© Copyright Three Star Media, 2020</p>
       <p>All image are taken from <a href="http://www.unsplash.com" target="blank">Unsplash</a></p>
     </div>
   </footer> 
