--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   <main>
     <section class="section-about"> <!-- ❗ flexbox img on left  h2 2xP on right need a couple of divs❗-->
       <div class="container">
-        <div class="section-about-image"><!-- ❗ didn't react to css like expected❗-->
+        <div class="section-about image"><!-- ❗ didn't react to css like expected❗-->
           <img src="images/about-us.jpg" alt="Three Star Media Break Room">
         </div> <!--END section-about-image-->
-        <div class="section-about-text">
+        <div class="section-about text">
           <h2>About Us</h2>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?</p>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Animi, velit ipsam? Atque accusamus, excepturi corrupti sunt reiciendis soluta quo commodi guidem, non perferendis vel sed facilis rerum cum in exercitationem?</p>
@@ -100,8 +100,8 @@
       <div class="container">
         <h2>Our Team</h2>
           <div class="profile-grid">
-            <img class="profile image" src="images/john.jpg" alt="John Doe">
-            <div class="profile text">
+            <img class="profile-image john" src="images/john.jpg" alt="John Doe">
+            <div class="profile-text john">
               <h3>John Doe</h3>
               <h4>CEO and Co-owner</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.
@@ -109,8 +109,8 @@
             </div>
           </div>
           <div class="profile-grid">
-            <img class="profile image" src="images/bob.jpg" alt="Bob Rite">
-            <div class="profile text">
+            <img class="profile-image bob" src="images/bob.jpg" alt="Bob Rite">
+            <div class="profile-text bob">
               <h3>Bob Rite</h3>
               <h4>CFO and Co-owner</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.
@@ -129,25 +129,25 @@
           <input type="text" id="fullname" name="fullname">
           <label for="email">Email</label>
           <input type="text" id="email" name="email">
-          <label for="message"> Your Message</label>
+          <label for="message"> Message</label>
           <textarea id="message"></textarea>
           <!-- ❗  <input type="submit" value="Send"> temp change to button ❗-->
           <button> Send </button>
         </form>
       </div>
       <div class="contact hours">
-        <h3>Hours of Operation</h3>
+        <h3>Hours of operation</h3>
         <table>
           <tr>
             <th>Days</th>
             <th>Hours</th>
           </tr>
           <tr>
-            <td>Monday-Friday</td>
-            <td>9am - 6pm</td>
+            <td>Monday - Friday</td>
+            <td>9 AM - 6 PM</td>
           </tr>
           <tr>
-            <td>Saturday-Sunday</td>
+            <td>Saturday - Sunday</td>
             <td>Closed</td>
           </tr>
         </table>
@@ -155,7 +155,7 @@
       <div class="contact location">
         <h3>Location</h3>
         <div class="contact-iframe">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2803.9447276243163!2d-75.754937!3d45.349928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669507582278!5m2!1sen!2sca" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2803.9447276243163!2d-75.754937!3d45.349928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669507582278!5m2!1sen!2sca" width="685" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div><!--END contact iframe-->
       </div><!--END contact loaction-->
       </div> <!--END container-->
